monitoring/prometheus/ingress.yaml
# https://doc.traefik.io/traefik/v2.0/routing/providers/kubernetes-crd/
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-grafana
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/grafana`)
    middlewares:
    - name: prometheus-compress
    services:
    - name: prometheus-grafana
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-kube-prometheus-prometheus
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Path(`/prometheus`) || (PathPrefix(`/prometheus/`) && !PathPrefix(`/prometheus/api/v1/admin`))
    middlewares:
    - name: prometheus-stripprefix
    - name: prometheus-compress
    services:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-alertmanager
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/alertmanager`)
    middlewares:
    - name: prometheus-compress
    services:
    - name: prometheus-kube-prometheus-alertmanager
      port: 9093
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-lt-kube-prometh-prometheus
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Path(`/prometheus-lt`) || (PathPrefix(`/prometheus-lt/`) && ! PathPrefix(`/prometheus-lt/api/v1/admin`))
    middlewares:
    - name: prometheus-stripprefix
    - name: prometheus-compress
    services:
    - name: prometheus-lt-kube-prometh-prometheus
      port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus-lt
      - /prometheus
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-compress
spec:
  compress:
    minResponseBodyBytes: 2048
    excludedContentTypes:
      - font/woff2
      - font/woff
      - image/jpeg
      - image/png
      - image/vnd.microsoft.icon
